# dauber

./: .gitignore  Cargo.toml  README.md
dauber/: Cargo.toml
dauber-core/: Cargo.toml
dauber-core/src/: color.rs  device.rs  image_info.rs  lib.rs  paint.rs  path.rs
dauber-core/src/geom/: mod.rs  point.rs  rect.rs  vector.rs
dauber-core/src/path/: math.rs  mod.rs
dauber-gpu/: Cargo.toml
dauber-gpu/src/: device.rs  lib.rs  shader.wgsl  types.rs
dauber-gpu/tests/: wgpu.rs
dauber-software/: Cargo.toml
dauber/src/: canvas.rs  lib.rs  surface.rs
